chore: add lint tools
- husky
- commitlint
- eclint
- lint-staged
- sass-lint/sass-lint-auto-fix

--- a/package.json
+++ b/package.json
@@ -3,10 +3,16 @@
   "version": "0.0.0",
   "scripts": {
     "ng": "ng",
+    "ng:update": "ng update @angular/cli @angular/core --allowDirty && npm audit fix",
     "start": "ng serve",
     "build": "ng build",
     "test": "ng test",
     "lint": "ng lint",
+    "lint:fix": "npm run lint -- --fix=true",
+    "lint:sass": "sass-lint -c ./.sass-lint.yml './src/**/*.scss' --verbose --no-exit",
+    "lint:sass:fix": "sass-lint-auto-fix",
+    "lint:editorconfig": "git ls-files -z | xargs -0 eclint check",
+    "lint:editorconfig:fix": "git ls-files -z | xargs -0 eclint fix",
     "e2e": "ng e2e"
   },
   "private": true,
@@ -28,10 +34,14 @@
     "@angular/cli": "~8.3.4",
     "@angular/compiler-cli": "~8.2.5",
     "@angular/language-service": "~8.2.5",
-    "@types/node": "~8.9.4",
+    "@commitlint/cli": "^8.3.5",
+    "@commitlint/config-conventional": "^8.3.4",
     "@types/jasmine": "~3.3.8",
     "@types/jasminewd2": "~2.0.3",
+    "@types/node": "~8.9.4",
     "codelyzer": "^5.0.0",
+    "eclint": "^2.8.1",
+    "husky": "^4.2.1",
     "jasmine-core": "~3.4.0",
     "jasmine-spec-reporter": "~4.2.1",
     "karma": "~4.1.0",
@@ -39,9 +49,12 @@
     "karma-coverage-istanbul-reporter": "~2.0.1",
     "karma-jasmine": "~2.0.1",
     "karma-jasmine-html-reporter": "^1.4.0",
+    "lint-staged": "^10.0.7",
     "protractor": "~5.4.0",
+    "sass-lint": "^1.13.1",
+    "sass-lint-auto-fix": "^0.21.0",
     "ts-node": "~7.0.0",
-    "tslint": "~5.15.0",
+    "tslint": "^5.15.0",
     "typescript": "~3.5.3"
   }
 }
