--- a/.editorconfig
+++ b/.editorconfig
@@ -11,3 +11,9 @@ trim_trailing_whitespace = true
 [*.md]
 max_line_length = off
 trim_trailing_whitespace = false
+
+[*.{ts,scss}]
+# https://github.com/jedmao/eclint#block_comment
+block_comment_start = /*
+block_comment = *
+block_comment_end = */
