chore: add SonarQube to run analysis in local environment

--- a/.gitignore
+++ b/.gitignore
@@ -1,5 +1,5 @@
-# Created by https://www.gitignore.io/api/node,sass,code,linux,macos,angular,windows
-# Edit at https://www.gitignore.io/?templates=node,sass,code,linux,macos,angular,windows
+# Created by https://www.gitignore.io/api/node,sass,code,linux,macos,angular,windows,sonarqube
+# Edit at https://www.gitignore.io/?templates=node,sass,code,linux,macos,angular,windows,sonarqube
 
 ### Angular ###
 ## Angular ##
@@ -189,6 +189,18 @@ temp/
 *.sass.map
 *.scss.map
 
+### SonarQube ###
+# SonarQube ignore files.
+#
+# https://docs.sonarqube.org/display/SCAN/Analyzing+with+SonarQube+Scanner
+# Sonar Scanner working directories
+.sonar/
+.scannerwork/
+
+# http://www.sonarlint.org/commandline/
+# SonarLint working directories, configuration files (including credentials)
+.sonarlint/
+
 ### Windows ###
 # Windows thumbnail cache files
 Thumbs.db
@@ -215,4 +227,4 @@ $RECYCLE.BIN/
 # Windows shortcuts
 *.lnk
 
-# End of https://www.gitignore.io/api/node,sass,code,linux,macos,angular,windows
+# End of https://www.gitignore.io/api/node,sass,code,linux,macos,angular,windows,sonarqube
