--- a/package.json
+++ b/package.json
@@ -19,6 +19,8 @@
     "e2e": "ng e2e",
     "bundle-analyzer": "npx webpack-bundle-analyzer ./dist/$npm_package_name/stats*.json --mode static --report ./documentation/bundle/index.html",
     "bundle-analyzer:serve": "npx http-server ./documentation/bundle/",
+    "compodoc": "compodoc -p ./tsconfig.app.json",
+    "compodoc:serve": "npx http-server ./documentation/",
     "sonar:start": "docker run --rm --name sonarqube -p 9000:9000 sonarqube",
     "sonar:stop": "docker stop sonarqube",
     "sonar:scanner": "docker run --rm --network host --mount type=bind,source=\"$(pwd)\",target=/project-root --workdir /project-root magnobiet/sonar-scanner:latest sonar-scanner"
@@ -44,6 +46,7 @@
     "@angular/language-service": "~8.2.5",
     "@commitlint/cli": "^8.3.5",
     "@commitlint/config-conventional": "^8.3.4",
+    "@compodoc/compodoc": "^1.1.11",
     "@types/jasmine": "~3.3.8",
     "@types/jasminewd2": "~2.0.3",
     "@types/node": "~8.9.4",
