chore: add integration with Storybook

--- a/package.json
+++ b/package.json
@@ -23,7 +23,9 @@
     "compodoc:serve": "npx http-server ./documentation/",
     "sonar:start": "docker run --rm --name sonarqube -p 9000:9000 sonarqube",
     "sonar:stop": "docker stop sonarqube",
-    "sonar:scanner": "docker run --rm --network host --mount type=bind,source=\"$(pwd)\",target=/project-root --workdir /project-root magnobiet/sonar-scanner:latest sonar-scanner"
+    "sonar:scanner": "docker run --rm --network host --mount type=bind,source=\"$(pwd)\",target=/project-root --workdir /project-root magnobiet/sonar-scanner:latest sonar-scanner",
+    "storybook:start": "start-storybook --static-dir ./dist/storybook/ --port 6006",
+    "storybook:build": "build-storybook --output-dir ./dist/storybook/"
   },
   "private": true,
   "dependencies": {
@@ -44,12 +46,19 @@
     "@angular/cli": "~8.3.4",
     "@angular/compiler-cli": "~8.2.5",
     "@angular/language-service": "~8.2.5",
+    "@babel/core": "^7.8.4",
     "@commitlint/cli": "^8.3.5",
     "@commitlint/config-conventional": "^8.3.4",
     "@compodoc/compodoc": "^1.1.11",
+    "@storybook/addon-actions": "^5.3.12",
+    "@storybook/addon-links": "^5.3.12",
+    "@storybook/addon-notes": "^5.3.12",
+    "@storybook/addons": "^5.3.12",
+    "@storybook/angular": "^5.3.12",
     "@types/jasmine": "~3.3.8",
     "@types/jasminewd2": "~2.0.3",
     "@types/node": "~8.9.4",
+    "babel-loader": "^8.0.6",
     "codelyzer": "^5.0.0",
     "eclint": "^2.8.1",
     "husky": "^4.2.1",
