chore: update to Angular 9

--- a/angular.json
+++ b/angular.json
@@ -127,5 +127,8 @@
       }
     }
   },
-  "defaultProject": "weather-now"
+  "defaultProject": "weather-now",
+  "cli": {
+    "analytics": false
+  }
 }
