chore: add TypeScript path aliases

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -17,7 +17,27 @@
     "lib": [
       "es2018",
       "dom"
-    ]
+    ],
+    "paths": {
+      "~/*": [
+        "./src/app/*"
+      ],
+      "@/*": [
+        "./src/app/shared/*"
+      ],
+      "@configs/*": [
+        "./src/app/configs/*"
+      ],
+      "@core/*": [
+        "./src/app/core/*"
+      ],
+      "@modules/*": [
+        "./src/app/modules/*"
+      ],
+      "@env": [
+        "./environments/environment.ts"
+      ]
+    }
   },
   "angularCompilerOptions": {
     "fullTemplateTypeCheck": true,
