feat: add application icons

--- a/angular.json
+++ b/angular.json
@@ -24,6 +24,13 @@
             "tsConfig": "tsconfig.app.json",
             "aot": true,
             "assets": [
+              "src/android-chrome-192x192.png",
+              "src/android-chrome-512x512.png",
+              "src/apple-touch-icon.png",
+              "src/favicon-16x16.png",
+              "src/favicon-32x32.png",
+              "src/safari-pinned-tab.svg",
+              "src/site.webmanifest",
               "src/favicon.ico",
               "src/assets"
             ],
