chore: deploy to Heroku

--- a/package.json
+++ b/package.json
@@ -27,7 +27,7 @@
     "storybook:start": "start-storybook --static-dir ./dist/storybook/ --port 6006",
     "storybook:build": "build-storybook --output-dir ./dist/storybook/",
     "changelog": "npx conventional-changelog-cli -p angular -i CHANGELOG.md -s",
-    "postinstall": "ngcc"
+    "postinstall": "ngcc && npm run build:prod"
   },
   "private": true,
   "dependencies": {
